# Luna

./: .gitignore  README.md  Untitled.ipynb  main.py  main2.py  mlflow.db  pyproject.toml  tts.py
core/commands/: loader.py
core/commands/kid/: kid.md
core/commands/parent/: parent.md
core/llm_client/: __init__.py  anthropic_llm_client.py  llm_client.py
core/personality/: loader.py  soul.md
core/prompts/: system_prompt.py
core/session/: session_storage.py
core/skills/: loader.py  system_prompt.py
core/skills/fake_skill/: SKILL.md
core/skills/hello/: SKILL.md
core/tools/: agent.py  bash_tool.py  command.py  complete_tool.py  message_classes.py  sequential_thinking.py  skill.py  str_replace_tool.py  test_bash_tool.py  test_sequential_thinking.py  test_str_replace.py  weather.py  workspace_manager.py
core/types/: agent_types.py
core/utils/: common.py  dialog.py  test_indent.py  token_counter.py  tool_common.py  types.py
mlartifacts/1/8daf5e162a5c47b2b93020fb012436e3/artifacts/: tool_results
services/: Untitled.ipynb  live_2d.py  speech_to_text.py  tts_soprano.py
tests/: test_dialog.py  test_tool_common.py
tools/: create_tools.py  weather_tool.py
utils/: client.py  short_term_memory.py
